5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1685_1951.log
== TEST (2019-06-17 22:36:12) 
-- CODE:
xo = float(input("coordenada: "))
yo = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y1) * (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
else : 
	print("Sobre a reta")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = (x1 - x0)*(y2 - y1) * (x2 - x0) * (y1 - y0)
NameError: name 'x0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:36:43) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y1) * (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
else : 
	print("Sobre a reta")
-- EXECUTION TIME:
0.683298
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
A esquerda da reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
Sobre a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 22:37:10) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y1) * (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
elif c == 0 : 
	print("Sobre a reta")
-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:38:39) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y1) - (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
elif c == 0 : 
	print("Sobre a reta")
-- EXECUTION TIME:
0.904107
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
Sobre a reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
A direita da reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:39:20) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y0) - (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
elif c == 0 : 
	print("Sobre a reta")
-- EXECUTION TIME:
0.835859
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
coordenada: coordenada: coordenada: coordenada: coordenada: coordenada: A direita da reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 22:40:44) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y0) - (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
elif c == 0 : 
	print("Sobre a reta")
-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:41:00) 
-- CODE:
x0 = float(input("coordenada: "))
y0 = float(input("coordenada: "))
x1 = float(input("coordenada: "))
y1 = float(input("coordenada: "))
x2 = float(input("coordenada: "))
y2 = float(input("coordenada: "))

c = (x1 - x0)*(y2 - y0) - (x2 - x0) * (y1 - y0)

if c < 0 :
	print("A direita da reta")
elif c > 0:
	print("A esquerda da reta")
elif c == 0 : 
	print("Sobre a reta")
-- EXECUTION TIME:
0.800021
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
